Small fixes on spacing

--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,9 @@ pre {
     margin: 0 auto;
     max-width: 76rem;
     padding: 0 2rem;
+    margin-top: 50px;
 }
+
 
 /*nav {*/
 /*    background-color: #333333;*/
